# image_zoom_lens

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  pyproject.toml
.github/workflows/: publish-to-pypi.yml
demo/: demo_app.py  requirements.txt
frontend/: index.html
image_zoom_lens/: __init__.py
image_zoom_lens/frontend/: index.html
